--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>로그인</title>
 <link rel="stylesheet" href="default.css">
-<link rel="stylesheet" href="style2.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<form action="./process.php?mode=login" method="POST">
