0925 브랜치병합

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<form action="./process.php?mode=login" method="POST">
         <div class="login">
-            <h2>CLOUD SORAGE</h2>
+            <h2>클라우드 스토리지 프로젝트</h2>
             <ul class="top">
             <li><label for="txt1">아이디</label><input type="text" name="id" id="id" placeholder="ID" required></li>
             <li><label for="txt2">비밀번호</label><input type="password" name="pw" id="pw" placeholder="PASSWORD" required></li>
@@ -19,7 +19,7 @@
             <li>회원가입은 이곳에서<a href="makeaccount.php">회원가입</a></li>
             </ul>
         </div>
-    </form>
-        
+	</form>
+
 </body>
 </html>
