--- a/makeaccount.html
+++ b/makeaccount.html
@@ -3,8 +3,8 @@
     <head>
     <meta charset="utf-8"/>
 	<title>회원가입</title>
-    <link rel="stylesheet" href="default.css">
-    <link rel="stylesheet" href="makeaccount.css">
+    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/makeaccount.css">
     </head>   
     <body>
         <form action="./process.php?mode=create" method="POST">
