--- a/share_file.html
+++ b/share_file.html
@@ -12,7 +12,7 @@
             <a>공유할 사람</a>
             <input type="text" id="rev_user" name="rev_user">
             <a>공유폴더 명</a>
-            <input type="text" id="pro_name" name="pro_name">
+            <input type="text" id="pro_name" name="pro_name" maxlength="10">
             <input type="submit" value="공유">
         </form>
       </div>
