개인 드라이브 페이지 우클릭 및 검색, 비우기 기능, 삭제 기능

--- a/makeaccount.html
+++ b/makeaccount.html
@@ -10,11 +10,11 @@
         <form action="./process.php?mode=create" method="POST">
             <h1>회원가입을 환영합니다!</h1>
             <h2>아이디</h2>
-            <p><input type="text" name="id" required></p>
+            <p><input type="text" name="id" class="idinfo" required></p>
             <h2>비밀번호</h2>
-            <p><input type="password" name="pw" required></p>
+            <p><input type="password" name="pw" class="pwinfo"required></p>
             <h2>이름</h2>
-            <p><input type="text" name="name" required></p>
+            <p><input type="text" name="name" class="nameinfo" required></p>
             <nav class="tel">
                 <h2 >전화번호</h2>
                 <p><input type="text" name="tel1" required>-<input type="text" name="tel2" required>-<input type="text" name="tel3" required></p>
